--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <source src="assets/opening.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
-    <div class="preload">TUNGGU BEB</div>
+    <div class="preload">TUNGGU YA</div>
     <div class="vidcont">
       <div class="divvideo">
         <video id="myVideo" width="100%" height="100%">
@@ -79,7 +79,7 @@
             Gw Armann
           </div>
           <div class="mycontent">
-            Lu Suka Ama Gw Kan? Iyalah Masa Engga Si :( Jujur Aja!
+            kao sayang Ama Gw Kan? jawab ya hehe:v
           </div>
           <div class="mybutton">
             <div class="mybuttonno" onmouseover="move()" onclick="move2()">tidak</div>
