--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="myheader" id="mywindowheader">Halo <span id="spannama"></span> Cantik!!</div>
         <div class="mybody">
           <div class="mytitle">
-            Gw Bramastya
+            Gw Bram
           </div>
           <div class="mycontent">
             kao sayang Ama Gw Kan? jawab ya hehe:v
